buildscript {
    dependencies {
        classpath 'com.h2database:h2:1.4.197'
    }
}

plugins {
    id 'java'
    id "org.flywaydb.flyway" version "7.9.1"
}

group 'io.javalin.sepm'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
    maven {
        url 'https://repo1.maven.org/maven2/io/javalin/javalin/3.13.4/'

        artifactUrls 'https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api/5.7.1'
        artifactUrls 'https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine/5.7.1'
        artifactUrls 'https://mvnrepository.com/artifact/org.junit.vintage/junit-vintage-engine/5.7.1'
    }

    jcenter()
    google()
}

dependencies {
    // https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients
    implementation 'com.google.code.gson:gson:2.8.6'
    compile 'io.javalin:javalin:3.13.4'

    compile 'com.google.guava:guava:30.1.1-jre'

    compile "org.flywaydb:flyway-core:7.9.1"

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.7.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
    testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.7.1'
}

test {
    useJUnitPlatform()
}

flyway {
    url = 'jdbc:h2:file:./sepm-b5-5-project/src/main/resources/db.migration'
    user = 'b55'
    password = 'sepmsem12021'
}

apply plugin: 'java'